add sidenav to toolbar

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,3 +1,13 @@
-<mat-toolbar color="primary">
-    <span>Simple CRM</span>
-</mat-toolbar>
+<mat-drawer-container class="example-container" autosize>
+    <mat-drawer #drawer class="example-sidenav" mode="side">
+        <p>Auto-resizing sidenav</p>
+    </mat-drawer>
+    <div class="example-sidenav-content">
+        <mat-toolbar color="primary">
+            <button type="button" mat-button (click)="drawer.toggle()">
+                <mat-icon>menu</mat-icon>
+            </button>
+            <span>Simple CRM</span>
+        </mat-toolbar>
+    </div>
+</mat-drawer-container>
