--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -1,3 +1,28 @@
 mat-drawer-container {
     height: 100vh;
 }
+
+mat-drawer {
+    width: 300px;
+}
+
+.sidenav-logo-container {
+    display: flex;
+    align-items: center;
+    padding: 0 16px 0 16px;
+    border-bottom: solid 1px rgba(0, 0, 0, .12);
+}
+
+.menu-link {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    text-decoration: none;
+}
+
+.mat-list-item {
+    cursor: pointer;
+    &:hover {
+        background-color: rgba(0, 0, 0, .12);
+    }
+}
