--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,3 @@
-<p>user works!</p>
+<button (click)="openAddUserDialog()" mat-fab color="primary" class="add-user-btn" matTooltip="Add user">
+    <mat-icon>add</mat-icon>
+</button>
