--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,27 +1,80 @@
 <h1 mat-dialog-title>Add User</h1>
 <div mat-dialog-content>
-    <div class="form-row">
-        <mat-form-field appearance="outline">
-            <mat-label>First Name</mat-label>
-            <input matInput placeholder="First name">
-            <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
-            <mat-hint>*Required</mat-hint>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-            <mat-label>Last Name</mat-label>
-            <input matInput placeholder="Last name">
-            <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
-            <mat-hint>*Required</mat-hint>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-            <mat-label>Choose a date</mat-label>
-            <input matInput [matDatepicker]="picker">
-            <mat-hint>MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
-    </div>
-
+    <form action="">
+        <fieldset>
+            <legend>General</legend>
+            <div class="form-row">
+                <mat-form-field appearance="fill">
+                    <mat-label>First Name</mat-label>
+                    <input matInput>
+                    <mat-icon matSuffix>person</mat-icon>
+                    <!-- <mat-hint>*Required</mat-hint> -->
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Last Name</mat-label>
+                    <input matInput>
+                    <mat-icon matSuffix>person</mat-icon>
+                    <!-- <mat-hint>*Required</mat-hint> -->
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Date of Birth</mat-label>
+                    <input matInput [matDatepicker]="picker">
+                    <mat-hint>MM/DD/YYYY</mat-hint>
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+            </div>
+            <div class="form-row">
+                <mat-form-field appearance="fill">
+                    <mat-label>Phone number</mat-label>
+                    <input matInput>
+                    <mat-icon matSuffix>call</mat-icon>
+                    <!-- <mat-hint>*Required</mat-hint> -->
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Email</mat-label>
+                    <input matInput>
+                    <mat-icon matSuffix>mail</mat-icon>
+                    <!-- <mat-hint>*Required</mat-hint> -->
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Website</mat-label>
+                    <input matInput>
+                    <mat-icon matSuffix>language</mat-icon>
+                    <mat-hint>*Optional</mat-hint>
+                </mat-form-field>
+            </div>
+        </fieldset>
+        <fieldset>
+            <legend>Address</legend>
+            <div class="form-row">
+                <mat-form-field appearance="fill">
+                    <mat-label>Street & house number</mat-label>
+                    <input matInput>
+                    <mat-icon matSuffix>signpost</mat-icon>
+                    <!-- <mat-hint>*Required</mat-hint> -->
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Zip Code</mat-label>
+                    <input matInput>
+                    <mat-icon matSuffix>location_on</mat-icon>
+                    <!-- <mat-hint>*Required</mat-hint> -->
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>City</mat-label>
+                    <input matInput>
+                    <mat-icon matSuffix>location_city</mat-icon>
+                    <!-- <mat-hint>*Required</mat-hint> -->
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Country</mat-label>
+                    <input matInput>
+                    <mat-icon matSuffix>flag</mat-icon>
+                    <!-- <mat-hint>*Required</mat-hint> -->
+                </mat-form-field>
+            </div>
+        </fieldset>
+    </form>
 </div>
 <div mat-dialog-actions>
     <button mat-button>Cancel</button>
