--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,24 @@
+<table mat-table [dataSource]="this.firestoreService.users" class="mat-elevation-z8">
+    <ng-container matColumnDef="firstName">
+        <th mat-header-cell *matHeaderCellDef>First Name</th>
+        <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="lastName">
+        <th mat-header-cell *matHeaderCellDef>Last Name</th>
+        <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="dateOfBirth">
+        <th mat-header-cell *matHeaderCellDef>Date of Birth</th>
+        <td mat-cell *matCellDef="let element"> {{element.dateOfBirth}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="getRecord(row)">
+    </tr>
+</table>
+
 <button (click)="openAddUserDialog()" mat-fab color="primary" class="add-user-btn" matTooltip="Add user">
     <mat-icon>add</mat-icon>
 </button>
