--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,3 +1,14 @@
+table {
+    width: 100%;
+}
+
+.mat-row {
+    cursor: pointer;
+    &:hover {
+        background-color: rgba(0, 0, 0, 0.04);
+    }
+}
+
 .add-user-btn {
     position: absolute;
     right: 32px;
