add toolbar logo

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,6 +1,8 @@
 <mat-drawer-container autosize>
     <mat-drawer #drawer mode="side" [opened]="true">
-        <div class="sidenav-logo-container mat-toolbar-row">Logo Placeholder</div>
+        <div class="sidenav-logo-container mat-toolbar-row">
+            <img src="./../../assets/img/logo/logo_cropped.png" alt="CRM Logo">
+        </div>
         <mat-nav-list>
             <mat-list-item role="listitem">
                 <a routerLink="dashboard">
