--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -8,9 +8,17 @@ mat-drawer {
 
 .sidenav-logo-container {
     display: flex;
+    justify-content: center;
     align-items: center;
     padding: 0 16px 0 16px;
     border-bottom: solid 1px rgba(0, 0, 0, .12);
+    img {
+        width: 200px;
+        object-fit: cover;
+        user-select: none;
+        pointer-events: none;
+        -webkit-user-drag: none;
+    }
 }
 
 .mat-list-item {
