--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -79,7 +79,7 @@
         </form>
     </div>
     <div mat-dialog-actions>
-        <button mat-button>Cancel</button>
+        <button mat-button (click)="this.dialogRef.close()">Cancel</button>
         <button (click)="this.firestoreService.addToFirestore()" mat-button cdkFocusInitial>Save</button>
     </div>
 </div>
