redirect tu user-details when clicking on specific user

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -15,7 +15,7 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="getRecord(row)">
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openUserDetails(row.userId)">
     </tr>
 </table>
 
