add user detail header

--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,1 +1,12 @@
-<p>user-detail works!</p>
+<mat-card>
+    <mat-card-content>
+        <div class="user-header-container">
+            <img src="./../../assets/img/account_circle.svg" alt="User img">
+            <div class="user-header-headline">
+                <h2>FirtstName LastName</h2>
+                <span>user@email.com</span>
+            </div>
+        </div>
+
+    </mat-card-content>
+</mat-card>
