add user detail address card

--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,12 +1,23 @@
-<mat-card>
-    <mat-card-content>
-        <div class="user-header-container">
-            <img src="./../../assets/img/account_circle.svg" alt="User img">
-            <div class="user-header-headline">
-                <h2>FirtstName LastName</h2>
-                <span>user@email.com</span>
+<div class="content">
+    <mat-card class="header-card">
+        <mat-card-content class="header-card-content">
+            <div class="user-header-container">
+                <img src="./../../assets/img/account_circle.svg" alt="User img">
+                <div class="user-header-headline">
+                    <h2>FirstName LastName</h2>
+                    <span>user@email.com</span>
+                </div>
             </div>
-        </div>
+        </mat-card-content>
+    </mat-card>
 
-    </mat-card-content>
-</mat-card>
+    <mat-card>
+        <mat-card-content>
+            <h2>Address</h2>
+            <span>Street</span><br>
+            <span>ZIP Code</span><br>
+            <span>City</span><br>
+            <span>Country</span>
+        </mat-card-content>
+    </mat-card>
+</div>
