--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -14,10 +14,10 @@
     <mat-card>
         <mat-card-content>
             <h2>Address</h2>
-            <span>Street</span><br>
-            <span>ZIP Code</span><br>
-            <span>City</span><br>
-            <span>Country</span>
+            <span>{{ this.currentUser.street }}</span><br>
+            <span>{{ this.currentUser.zipCode }}</span><br>
+            <span>{{ this.currentUser.city }}</span><br>
+            <span>{{ this.currentUser.country }}</span>
         </mat-card-content>
     </mat-card>
 </div>
