--- a/src/app/user-detail/user-detail.component.scss
+++ b/src/app/user-detail/user-detail.component.scss
@@ -36,10 +36,14 @@
     }
 }
 
-.edit-user-btn {
+.open-user-menu-btn {
     position: absolute;
     top: 8px;
     right: 8px;
+}
+
+.delete-user-btn {
+    color: #f44336;
 }
 
 .user-information {
