refactor and move firestore methods in service

--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -80,6 +80,6 @@
     </div>
     <div mat-dialog-actions>
         <button mat-button (click)="this.dialogRef.close()">Cancel</button>
-        <button (click)="this.firestoreService.addToFirestore()" mat-button cdkFocusInitial>Save</button>
+        <button (click)="this.firestoreService.addAllUsers()" mat-button cdkFocusInitial>Save</button>
     </div>
 </div>
