--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -4,8 +4,8 @@
             <div class="user-header-container">
                 <img src="./../../assets/img/account_circle.svg" alt="User img">
                 <div class="user-header-headline">
-                    <h2>FirstName LastName</h2>
-                    <span>user@email.com</span>
+                    <h2>{{ this.firestoreService.currentUser.firstName }} {{ this.firestoreService.currentUser.lastName }}</h2>
+                    <span>{{ this.firestoreService.currentUser.email }}</span>
                 </div>
             </div>
         </mat-card-content>
@@ -22,21 +22,21 @@
         <mat-card-content class="user-information">
             <div>
                 <h2>Person</h2>
-                <span><strong>First Name: </strong> {{ this.currentUser.firstName }}</span><br>
-                <span><strong>Last Name: </strong>{{ this.currentUser.lastName }}</span><br>
-                <span><strong>Date of Birth: </strong>{{ this.currentUser.dateOfBirth }}</span><br>
+                <span><strong>First Name: </strong> {{ this.firestoreService.currentUser.firstName }}</span><br>
+                <span><strong>Last Name: </strong>{{ this.firestoreService.currentUser.lastName }}</span><br>
+                <span><strong>Date of Birth: </strong>{{ this.firestoreService.currentUser.dateOfBirth }}</span><br>
             </div>
             <div>
                 <h2>Address</h2>
-                <span><strong>Street: </strong>{{ this.currentUser.street }}</span><br>
-                <span><strong>Zip Code: </strong>{{ this.currentUser.zipCode }}</span><br>
-                <span><strong>City: </strong>{{ this.currentUser.city }}</span><br>
-                <span><strong>Country: </strong>{{ this.currentUser.country }}</span>
+                <span><strong>Street: </strong>{{ this.firestoreService.currentUser.street }}</span><br>
+                <span><strong>Zip Code: </strong>{{ this.firestoreService.currentUser.zipCode }}</span><br>
+                <span><strong>City: </strong>{{ this.firestoreService.currentUser.city }}</span><br>
+                <span><strong>Country: </strong>{{ this.firestoreService.currentUser.country }}</span>
             </div>
             <div>
                 <h2>Contact</h2>
-                <span><strong>Phone Number: </strong>{{ this.currentUser.phoneNumber }}</span><br>
-                <span><strong>Email: </strong>{{ this.currentUser.email }}</span><br>
+                <span><strong>Phone Number: </strong>{{ this.firestoreService.currentUser.phoneNumber }}</span><br>
+                <span><strong>Email: </strong>{{ this.firestoreService.currentUser.email }}</span><br>
             </div>
         </mat-card-content>
     </mat-card>
