--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -16,8 +16,8 @@
             <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #menu="matMenu" xPosition="before">
-            <button (click)="editCurrentUser(this.userId)" mat-menu-item>Edit</button>
-            <button (click)="deleteCurrentUser(this.userId)" mat-menu-item class="delete-user-btn">Delete</button>
+            <button (click)="openEditUserDialog(this.userId)" mat-menu-item>Edit</button>
+            <button (click)="openDeleteUserDialog(this.userId)" mat-menu-item class="delete-user-btn">Delete</button>
         </mat-menu>
         <mat-card-content class="user-information">
             <div>
