--- a/src/app/dialog-delete-user/dialog-delete-user.component.html
+++ b/src/app/dialog-delete-user/dialog-delete-user.component.html
@@ -1,8 +1,11 @@
-<h1 mat-dialog-title>Delete User</h1>
-<div mat-dialog-content>
-    <p>Are you sure you wan't to delete this user?</p>
-</div>
-<div mat-dialog-actions>
-    <button (click)="this.dialogRef.close()" mat-button>Cancel</button>
-    <button (click)="this.firestoreService.deleteUser(this.userId); this.redirect()" color="warn" mat-button cdkFocusInitial>Delete</button>
+<div class="dialog-wrapper">
+    <mat-progress-bar *ngIf="this.firestoreService.loading" mode="indeterminate" class="dialog-progress-bar"></mat-progress-bar>
+    <h1 mat-dialog-title>Delete User</h1>
+    <div mat-dialog-content>
+        <p>Are you sure you wan't to delete this user?</p>
+    </div>
+    <div mat-dialog-actions>
+        <button (click)="this.dialogRef.close()" mat-button>Cancel</button>
+        <button (click)="this.deleteUser()" color="warn" mat-button cdkFocusInitial>Delete</button>
+    </div>
 </div>
