--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,16 @@ fieldset {
     border: solid 1px #3F51B5;
     border-radius: 5px;
 }
+
+.dialog-wrapper {
+    position: relative;
+}
+
+.dialog-progress-bar {
+    position: absolute;
+    top: -24px;
+    right: -24px;
+    left: -24px;
+    width: calc(100% + 48px);
+    height: 8px;
+}
