rename user to customer part 1

--- a/src/app/dialog-add-customer/dialog-add-customer.component.html
+++ b/src/app/dialog-add-customer/dialog-add-customer.component.html
@@ -1,6 +1,6 @@
 <div class="dialog-wrapper">
     <mat-progress-bar *ngIf="this.firestoreService.loading" mode="indeterminate"></mat-progress-bar>
-    <h1 mat-dialog-title>Add User</h1>
+    <h1 mat-dialog-title>Add Customer</h1>
     <div mat-dialog-content>
         <form action="">
             <fieldset>
