--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -11,9 +11,9 @@
                 </a>
             </mat-list-item>
             <mat-list-item role="listitem">
-                <a routerLink="user">
+                <a routerLink="customers">
                     <mat-icon color="primary">person</mat-icon>
-                    <span>User</span>
+                    <span>Customers</span>
                 </a>
             </mat-list-item>
         </mat-nav-list>
